src/objects/Child_Obj__c.object
<CustomObject>
    <fields>
        <fullName>Class_Studied__c</fullName>
        <label>Class Studied</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StudentID__c</fullName>
        <label>Student ID</label>
        <referenceTo>Parent_Obj__c</referenceTo>
        <relationshipLabel>Child Objs</relationshipLabel>
        <relationshipName>Child_Objs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Total_fees_Paid__c</fullName>
        <label>Total fees Paid</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Child Obj</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Child Obj Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Child Objs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>